--- a/.drone.yml
+++ b/.drone.yml
@@ -22,7 +22,7 @@ steps:
       - VER=$${VER%.*}
       - TAGS="$TAGS$VER"
       - echo -n $TAGS > .tags
-      - cat .tags
+      - echo $TAGS
 
   - name: build and publish
     image: plugins/docker
