--- a/.drone.yml
+++ b/.drone.yml
@@ -35,6 +35,21 @@ steps:
       repo: docker.internal.walbeck.it/walbeck-it/alerta
       registry: docker.internal.walbeck.it
 
+  - name: notify
+    image: plugins/matrix
+    settings:
+        homeserver: https://matrix.mwalbeck.org
+        roomid:
+        from_secret: matrix_roomid
+        username:
+        from_secret: matrix_username
+        password:
+        from_secret: matrix_password
+    when:
+        status:
+        - success
+        - failure
+
 trigger:
   branch:
     - master
@@ -57,24 +72,3 @@ steps:
 trigger:
   event:
     - pull_request
-
----
-kind: pipeline
-name: notify
-
-steps:
-  - name: notify
-    image: plugins/matrix
-    settings:
-      homeserver: https://matrix.mwalbeck.org
-      roomid:
-        from_secret: matrix_roomid
-      username:
-        from_secret: matrix_username
-      password:
-        from_secret: matrix_password
-
-trigger:
-  status:
-    - success
-    - failure
