--- a/.drone.yml
+++ b/.drone.yml
@@ -30,6 +30,10 @@ steps:
     pull: if-not-exists
     settings:
       dockerfile: Dockerfile
+      username:
+        from_secret: dockerhub_username
+      password:
+        from_secret: dockerhub_password_ro
       repo: mwalbeck/alerta
       dry_run: true
 
@@ -93,6 +97,6 @@ depends_on:
 
 ---
 kind: signature
-hmac: eab2c08408d19382da51398fb238da7b913b05564848c1d2a5849b6b337dea9a
+hmac: d461989d7df96857881f22496eeeac1377e9bbc1cf93f3f77ffbd03c70b3c677
 
 ...
