--- a/.forgejo/workflows/test.yml
+++ b/.forgejo/workflows/test.yml
@@ -29,6 +29,11 @@ jobs:
         run: |
           determine-docker-tags
           dockerd &
+      - name: Login to Docker Hub
+        uses: https://github.com/docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN_RO }}
       - name: Set up Docker Buildx
         uses: https://github.com/docker/setup-buildx-action@v3
       - name: Test build
