Update workflows to use Forgejo container registry as well (#54)
Reviewed-on: https://git.walbeck.it/walbeck-it/docker-alerta/pulls/54
Co-authored-by: Magnus Walbeck <magnus.walbeck@walbeck.it>
Co-committed-by: Magnus Walbeck <magnus.walbeck@walbeck.it>

--- a/.forgejo/workflows/test.yml
+++ b/.forgejo/workflows/test.yml
@@ -25,15 +25,10 @@ jobs:
           DOCKERFILE_PATH: "Dockerfile"
           CUSTOM_TAGS: "latest"
           INCLUDE_SUFFIX: "no"
-          IMAGE_NAME: "mwalbeck/alerta"
+          IMAGE_NAME: "git.walbeck.it/walbeck-it/alerta"
         run: |
           determine-docker-tags
           dockerd &
-      - name: Login to Docker Hub
-        uses: https://github.com/docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN_RO }}
       - name: Set up Docker Buildx
         uses: https://github.com/docker/setup-buildx-action@v3
       - name: Test build
