--- a/.forgejo/workflows/build.yml
+++ b/.forgejo/workflows/build.yml
@@ -18,8 +18,22 @@ jobs:
     runs-on: dind
     steps:
       - uses: actions/checkout@v6
-      - name: Get docker tags for forgejo image
-        id: tags
+
+      - name: Get docker tags - Docker Hub
+        id: dockerhub_tags
+        shell: sh
+        env:
+          VERSION_TYPE: "docker_from"
+          APP_NAME: "alerta/alerta-web"
+          DOCKERFILE_PATH: "Dockerfile"
+          CUSTOM_TAGS: "latest"
+          INCLUDE_SUFFIX: "no"
+          IMAGE_NAME: "mwalbeck/alerta"
+        run: |
+          determine-docker-tags
+
+      - name: Get docker tags - Forgejo
+        id: forgejo_tags
         shell: sh
         env:
           VERSION_TYPE: "docker_from"
@@ -31,39 +45,26 @@ jobs:
         run: |
           determine-docker-tags
           dockerd &
+          
+      - name: Login to Docker Hub
+        uses: https://github.com/docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Login to forgejo container registry
         uses: https://github.com/docker/login-action@v3
         with:
           registry: git.walbeck.it
           username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
           password: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
+
       - name: Set up Docker Buildx
         uses: https://github.com/docker/setup-buildx-action@v3
       - name: Build and push
         uses: https://github.com/docker/build-push-action@v6
         with:
           push: true
-          tags: ${{ steps.tags.outputs.tags }}
-      - name: Get docker tags
-        id: tags
-        shell: sh
-        env:
-          VERSION_TYPE: "docker_from"
-          APP_NAME: "alerta/alerta-web"
-          DOCKERFILE_PATH: "Dockerfile"
-          CUSTOM_TAGS: "latest"
-          INCLUDE_SUFFIX: "no"
-          IMAGE_NAME: "mwalbeck/alerta"
-        run: determine-docker-tags
-      - name: Login to Docker Hub
-        uses: https://github.com/docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Set up Docker Buildx
-        uses: https://github.com/docker/setup-buildx-action@v3
-      - name: Build and push
-        uses: https://github.com/docker/build-push-action@v6
-        with:
-          push: true
-          tags: ${{ steps.tags.outputs.tags }}
+          tags: |
+            ${{ steps.dockerhub_tags.outputs.tags }}
+            ${{ steps.forgejo_tags.outputs.tags }}
